<resources>
    <string name="app_name">YeniAppWKotlin</string>
    <string name="toggle_style"><b>Beğendin</b></string>
    <string name="have_account">Zaten bir hesabın var mı?</string>
    <string name="conf_password">Şifre Onay</string>
    <string name="sign_up">Kayıt Ol</string>
    <string name="password">Şifre</string>
    <string name="e_mail">E-mail</string>
    <string name="user_name">user name</string>
    <string name="edit_string">Yarım cümleni paylaş…</string>
    <string name="hint_password">sifre</string>
    <string name="text_signIn">Giriş Yap</string>
    <string name="is_have_account">Henüz bir hesabın yok mu?</string>
    <string name="register_now">Şimdi Kayıt Ol</string>
    <string name="signin_with_google">Google ile giriş yap</string>
    <string name="voveyle">Luna Lu</string>
    <string name="appName">Luna Lu - Cümleleri Tamamla</string>
    <string name="first_name">Ad</string>
    <string name="last_name">Soyad</string>
    <string name="hint_phone_number">Telefon Numarası</string>
    <string name="hint_user_name">Kullanıcı Adı</string>

    <!--Splash Screen-->
    <string name="walkthrough_text_one_one">Luna Lu\'ya Hoşgeldin</string>
    <string name="walkthrough_text_two_two">Yarım Cümleni Paylaş</string>
    <string name="walkthrough_text_three_three">Tamamlamaları Beğen</string>
    <string name="walkthrough_text_four_four">Unutma</string>

    <string name="walkthrough_text_one">Burada yaratıcılığını ortaya çıkabilir ve yeni kişilerle tanışabilirsin.</string>
    <string name="walkthrough_text_two">Diğer kullanıcıların tamamlaması için yarım cümleni paylaşabilirsin.</string>
    <string name="walkthrough_text_three">Yarım cümlene yapılan tamamlamaları görebilir ve bunları beğenebilirsin.</string>
    <string name="walkthrough_text_four">Tamamlamasını beğendiğin kişiler artık seninle iletişi kurabilir ve sana mesaj atabilir.</string>

    <!--Register Control-->
    <string name="valid_user_name">Kullanıcı adınız 5 karakterden küçük, 20 karakterden büyük olamaz</string>
    <string name="fill_fields">Lütfen tüm alanları doldurunuz</string>
    <string name="password_dont_match">Şifreleriniz uyuşmamakta</string>
    <string name="valid_first_name">Adınız 3 karakterden küçük, 15 karakterden büyük olamaz</string>
    <string name="valid_last_name">Soyadınız 2 karakterden küçük, 15 karakterden büyük olamaz</string>
    <string name="valid_mail">Mail adresinizi kontrol edin</string>
    <string name="valid_phone">Telefon numaranızı kontrol edin</string>
    <string name="match_password">Şifreleriniz uyuşmuyor</string>
    <string name="valid_password">Şifreniz 9 karakterden küçük olamaz</string>
    <!--Register Response-->
    <string name="username_taken">Kullanıcı adı kullanılmakta.</string>
    <string name="mail_taken">Mail adresi kullanılmakta</string>
    <string name="check_information">Lütfen bilgilerinizi kontrol edin.</string>
    <string name="account_blocked">Kurallara uymadığından dolayı bu hesap kapatılmıştır.</string>

    <!--Phone Authentication Screen-->
    <string name="verification_code">Doğrulama Kodu!</string>
    <string name="send_code">+90 531 910 25 10 nolu telefona doğrulama kodu gönderiildi.</string>
    <string name="confirm_contiue">Onayla Devam Et</string>
    <string name="phone_send_code">\" nolu telefona doğrulama kodu gönderildi.\"</string>
    <string name="six_character">Girdiğiniz kod 6 karakterden küçük olamaz!</string>
    <string name="comments">Yorumlar</string>
    <string name="share">PAYLAŞ</string>
    <string name="send_message">Mesaj At</string>
    <string name="empty_like_fragment">Henüz bir etkileşiminiz yok. Diğer kişilerle iletişime geçmek için paylaşımları beğenin ve yorum yapın.</string>
    <string name="empty_message">Henüz mesajınız yok</string>
    <string name="logout">Çıkış Yap</string>
    <string name="empty_user_posts">Henüz bir paylaşımınız bulunmamakta.</string>
    <string name="check_internet">Lütfen internet bağlantınızı kontrol ediniz</string>
    <string name="have_a_error">Bir hata ile karşılaştık, lütfen daha sonra tekrar deneyin</string>
    <string name="level_low">Seviye: Başlangıç(Bu seviyede birisini takip edemezsiniz)</string>
    <string name="empty_different_user_posts">Kullanıcının paylaşmı bulunmamakta</string>
    <string name="change_profile_pic">Profil Fotoğrafını Değiştir</string>
    <string name="edit_profile">Profil Düzenle</string>

</resources>
