<?xml version="1.0" encoding="utf-8"?>

<layout>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screen_back"
        tools:context=".ui.activity.auth.LoginActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView">

            <EditText
                android:id="@+id/et_login_email"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icon_email"
                android:drawablePadding="10dp"
                android:ems="10"
                android:gravity="start"
                android:hint="e-mail"
                android:inputType="textEmailAddress"
                android:textColorHint="#000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/txt1"
            app:layout_constraintStart_toStartOf="@id/txt1"
            app:layout_constraintTop_toBottomOf="@id/txt1"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColorHint="#000" />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/txt2" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/signin_button"
            android:text="@string/text_signIn"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@id/txt1"
            app:layout_constraintStart_toStartOf="@id/txt1"
            app:layout_constraintTop_toBottomOf="@id/txt2" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/txt1"
            app:layout_constraintStart_toStartOf="@id/txt1"
            app:layout_constraintTop_toBottomOf="@id/btn_login">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_have_account" />

            <TextView
                android:id="@+id/text_view_login_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_now"
                android:textColor="#000" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.shobhitpuri.custombuttons.GoogleSignInButton
            android:id="@+id/sign_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="50dp"
            android:text="@string/signin_with_google"
            android:textAllCaps="false"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
