<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screen_back"
        tools:context=".ui.activity.PhoneAuthActivity">

        <ImageView
            android:id="@+id/iv_letter"
            android:src="@drawable/auth_screen_email_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/title"
            android:layout_marginBottom="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/voveyle" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/iv_letter"
            app:layout_constraintEnd_toEndOf="@id/iv_letter"
            android:layout_marginBottom="50dp"
            android:textStyle="bold"
            android:textColor="#403E3E"
            android:text="@string/verification_code"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/phone_auth_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="#403E3E"
            android:text="@string/send_code"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/phone_auth_text"
            app:layout_constraintStart_toStartOf="@id/phone_auth_text"
            android:weightSum="6"
            android:layout_margin="20dp"
            app:layout_constraintEnd_toEndOf="@id/phone_auth_text"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/verify1"
                android:maxLength="1"
                android:lines="1"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:inputType="number"
                android:background="@color/transparent_gray"
                android:gravity="center"
                android:focusable="true"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_height="40dp"
                tools:ignore="LabelFor"
                android:autofillHints="5"/>
            <EditText
                android:id="@+id/verify2"
                android:maxLength="1"
                android:lines="1"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:inputType="number"
                android:background="@color/transparent_gray"
                android:gravity="center"
                android:focusable="true"
                android:layout_marginStart="8dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_height="40dp"
                android:autofillHints="5"
                tools:ignore="LabelFor" />
            <EditText
                android:id="@+id/verify3"
                android:maxLength="1"
                android:lines="1"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:inputType="number"
                android:background="@color/transparent_gray"
                android:gravity="center"
                android:focusable="true"
                android:layout_marginStart="8dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_height="40dp"
                tools:ignore="LabelFor"
                android:autofillHints="5" />
            <EditText
                android:id="@+id/verify4"
                android:maxLength="1"
                android:lines="1"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:inputType="number"
                android:background="@color/transparent_gray"
                android:gravity="center"
                android:focusable="true"
                android:layout_marginStart="8dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_height="40dp"
                tools:ignore="LabelFor"
                android:autofillHints="5"/>
            <EditText
                android:id="@+id/verify5"
                android:maxLength="1"
                android:lines="1"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:inputType="number"
                android:background="@color/transparent_gray"
                android:gravity="center"
                android:focusable="true"
                android:layout_marginStart="8dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_height="40dp"
                tools:ignore="LabelFor"
                android:autofillHints="5"/>
            <EditText
                android:id="@+id/verify6"
                android:maxLength="1"
                android:lines="1"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:inputType="number"
                android:background="@color/transparent_gray"
                android:gravity="center"
                android:focusable="true"
                android:layout_marginStart="8dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_height="40dp"
                tools:ignore="LabelFor"
                android:autofillHints="5"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_phone_auth"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/signin_button"
            android:text="@string/confirm_contiue"
            android:textColor="#FFFFFF"
            tools:ignore="Autofill" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
